--- a/src/styles/Options.scss
+++ b/src/styles/Options.scss
@@ -2,6 +2,8 @@
     height: 4vh;
     width: 100%;
     padding-bottom: 1rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
 
     button {
         padding: 0.7rem;
