--- a/src/styles/Screen.scss
+++ b/src/styles/Screen.scss
@@ -18,7 +18,7 @@ body {
     padding: 0.5rem;
     text-align: center;
     color: white;
-    font-family: 'monospace';
+    font-family: 'Montserrat', sans-serif;
 
     a {
       color: white;               
